# data_science_henry

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: mcp-usage.mdc
clase_01_introduccion_ml/: README.md
clase_01_introduccion_ml/docs/: actividad_clase.md  homework.md  resumen_contenidos.md
clase_01_introduccion_ml/notebooks/: 01_ejemplo_basico.ipynb  02_homework_eda_retailboost.ipynb  actividad_clase_01_eda_retailboost.ipynb  resumen_actividad_clase_01.ipynb
clase_01_introduccion_ml/scripts/: data_loader.py  preprocessing.py
clase_02_regresion/: README.md
clase_02_regresion/docs/: actividad_clase.md  homework_consigna.md  temas_clase.md
clase_02_regresion/notebooks/: actividad_clase_02_presentacion.ipynb  actividad_clase_02_regresion_retailboost.ipynb  homework_regresion_retailboost.ipynb
clase_02_regresion/scripts/: get_metrics.py
clase_03_regresion_logistica/: README.md
clase_03_regresion_logistica/docs/: consigna_actividad_clase_3.md  consigna_avance_1_PI.md  diccionario_variables.md  temas_clase_3.md
clase_03_regresion_logistica/notebooks/: 1_EDA_RegresionLogistica.ipynb  CONCLUSIONES_REALES.md  actividad_clase_03_regresion_logistica.ipynb
clase_04_clasificacion_metricas/docs/: homework.md  resumen_contenidos.md
clase_05_modelos_ensamble/: CAMBIOS_REALIZADOS.md
clase_10_deep_learning/: README.md
clase_10_deep_learning/docs/: homework.md  (+3 more)
clase_11_consulta/: README.md
utils/: __init__.py  data_processing.py  model_evaluation.py  visualization.py
(+35 files in other folders)
