[tool.poetry]
name = "data-science-henry"
version = "1.0.0"
description = "Curso completo de Data Science y Machine Learning - 10 clases + 1 consulta"
authors = ["mgobea_meli <mariano.gobea@mercadolibre.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "utils"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.24.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
scikit-learn = "^1.3.0"
jupyter = "^1.0.0"
jupyterlab = "^4.0.0"
notebook = "^7.0.0"
ipykernel = "^6.25.0"
scipy = "^1.11.0"
statsmodels = "^0.14.0"
xgboost = "^2.0.0"
lightgbm = "^4.0.0"
catboost = "^1.2.0"
optuna = "^3.3.0"
plotly = "^5.17.0"
tensorflow = "^2.15.0"
torch = "^2.1.0"
torchvision = "^0.16.0"
pillow = "^10.0.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
openpyxl = "^3.1.0"
xlrd = "^2.0.1"
python-dotenv = "^1.0.0"
joblib = "^1.3.0"
imbalanced-learn = "^0.11.0"
yellowbrick = "^1.5"
shap = "^0.43.0"
lime = "^0.2.0"
mlxtend = "^0.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
